fix gaps

--- a/src/components/pages/home/info/info.css
+++ b/src/components/pages/home/info/info.css
@@ -1,6 +1,8 @@
 .info-section {
   padding: 4rem 0;
   background: white;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .info-container {
